objects/NDR_Opportunity_Default_Owner__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting contains region sales name,their respective admin user ids and the region name received from SAP</description>
    <fields>
        <fullName>BU_Admin_UserId__c</fullName>
        <description>This field contains the user id&apos;s of the BU Admin for respective region.</description>
        <label>BU Admin UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultAccountId__c</fullName>
        <description>Salesforce Id of default account for this region.</description>
        <inlineHelpText>Salesforce Id of default account for this region</inlineHelpText>
        <label>Default Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>END_Customer_Country__c</fullName>
        <label>END Customer Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Sales__c</fullName>
        <label>Region Sales</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NDR Opportunity Default Owner</label>
</CustomObject>